# PICOnsole

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  piconsole_os_memmap.ld  piconsole_program_memmap.ld
KiCad/Devkit/Handheld Interface/: HandheldInterface.kicad_pcb  HandheldInterface.kicad_prl  HandheldInterface.kicad_pro  HandheldInterface.kicad_sch  buttons.kicad_sch  debugging.kicad_sch  fp-lib-table  os_pico.kicad_sch  sd_card.kicad_sch
KiCad/Devkit/Handheld Interface/GerberExport/: HandheldInterface-B_Cu.gbr  HandheldInterface-B_Mask.gbr  HandheldInterface-B_Paste.gbr  HandheldInterface-B_Silkscreen.gbr  HandheldInterface-Edge_Cuts.gbr  HandheldInterface-F_Cu.gbr  HandheldInterface-F_Mask.gbr  HandheldInterface-F_Paste.gbr  HandheldInterface-F_Silkscreen.gbr  HandheldInterface-NPTH-drl_map.gbr  HandheldInterface-NPTH.drl  HandheldInterface-PTH-drl_map.gbr  HandheldInterface-PTH.drl  HandheldInterface-job.gbrjob
KiCad/Devkit/Handheld Interface/PICOnsole.pretty/: QRCode_Soldermask.kicad_mod
KiCad/Devkit/Hotswap Pico Hub/: DevkitHotswapPicoHub-B_Cu.gbr  DevkitHotswapPicoHub-B_Mask.gbr  DevkitHotswapPicoHub-B_Paste.gbr  DevkitHotswapPicoHub-B_Silkscreen.gbr  DevkitHotswapPicoHub-Edge_Cuts.gbr  DevkitHotswapPicoHub-F_Cu.gbr  DevkitHotswapPicoHub-F_Mask.gbr  DevkitHotswapPicoHub-F_Paste.gbr  DevkitHotswapPicoHub-F_Silkscreen.gbr  DevkitHotswapPicoHub-job.gbrjob  DevkitHotswapPicoHub.kicad_pcb  DevkitHotswapPicoHub.kicad_prl  DevkitHotswapPicoHub.kicad_pro  DevkitHotswapPicoHub.kicad_sch  buttons.kicad_sch  control_bus.kicad_sch  debugging.kicad_sch  fp-info-cache  os_pico.kicad_sch  user_pico.kicad_sch  ~PICOnsole.kicad_sch.lck
KiCad/Devkit/Hotswap Pico Hub/GerberExport/: DevkitHotswapPicoHub-B_Cu.gbr  DevkitHotswapPicoHub-B_Mask.gbr  DevkitHotswapPicoHub-B_Paste.gbr  DevkitHotswapPicoHub-B_Silkscreen.gbr  DevkitHotswapPicoHub-Edge_Cuts.gbr  DevkitHotswapPicoHub-F_Cu.gbr  DevkitHotswapPicoHub-F_Mask.gbr  DevkitHotswapPicoHub-F_Paste.gbr  DevkitHotswapPicoHub-F_Silkscreen.gbr  DevkitHotswapPicoHub-NPTH-drl_map.gbr  DevkitHotswapPicoHub-NPTH.drl  DevkitHotswapPicoHub-PTH-drl_map.gbr  DevkitHotswapPicoHub-PTH.drl  DevkitHotswapPicoHub-job.gbrjob
KiCad/Devkit/Hotswap Pico Hub/PICOnsole.pretty/: QRCode.kicad_mod  QRCode_Soldermask.kicad_mod
KiCad/PICOnsole/: PICOnsole.kicad_prl  PICOnsole.kicad_pro  PICOnsole.kicad_sch  PICOnsole.kicad_sym  control_bus.kicad_sch  feedback.kicad_sch  fp-info-cache  os_sector.kicad_sch  powersupply.kicad_sch  sym-lib-table  user_pico.kicad_sch  user_sector.kicad_sch
KiCad/PICOnsole/GerberExport/: PICOnsole-B_Mask.gbr  PICOnsole-F_Cu.gbr  PICOnsole-F_Paste.gbr  PICOnsole-F_Silkscreen.gbr
KiCad/PICOnsole/PICOnsole.pretty/: QRCode.kicad_mod  Raspberry_Pi_Pico.kicad_mod  Waveshare_1.8in_LCD.kicad_mod
PICOnsole/: PICOnsole.kicad_pcb  PICOnsole.kicad_prl  PICOnsole.kicad_pro  PICOnsole.kicad_sch  PICOnsole.kicad_sch-bak  PICOnsole.kicad_sym  fp-info-cache
PICOnsole/GerberExport/: PICOnsole-B_Cu.gbr  PICOnsole-B_Paste.gbr  PICOnsole-B_Silkscreen.gbr  PICOnsole-Edge_Cuts.gbr  PICOnsole-F_Mask.gbr  PICOnsole-NPTH.drl  PICOnsole-PTH.drl  PICOnsole-job.gbrjob
Prototype/: PICOnsole.py  PiLogo.sprite  debugger.py  folder_view.py  main.py  settings.py
example_program/: CMakeLists.txt  piconsole_program_memmap.ld
example_program/src/: main.cpp
inc/: LCD.h  OS.h  PICOnsole.h  SD.h  debug.h  memory.h  path.h  program.h
input_test/: CMakeLists.txt
input_test/src/: main.cpp
models/: DPad.blend  DPad.blend1  DPad.stl  DevkitTestbench.blend  DevkitTestbench.blend1  DevkitTestbench.stl
os/: CMakeLists.txt  piconsole_os_memmap.ld
os/inc/: LCD.h  OS.h  PICOnsole.h  PICOnsole_defines.h  SD.h  Vibrator.h  debug.h  path.h  program.h  version.h
os/inc/gfx/: color.h  text.h  typeface.h
os/inc/gfx/typefaces/: ascii_5px.h
os/inc/interfaces/: Input.h  LCD.h  Speaker.h
os/libs/FatFS_SD/FatFs_SPI/include/: my_debug.h
os/libs/FatFS_SD/FatFs_SPI/sd_driver/: sd_card.c  sd_card.h  sd_spi.c  spi.c  spi.h
os/src/: LCD.cpp  OS.cpp  PICOnsole.cpp  SD.cpp  Speaker.cpp  Vibrator.cpp  i2s.pio  main.cpp  version.cpp
os/src/gfx/: text.cpp
os/src/gfx/typefaces/: ascii_5px.cpp
os/src/interfaces/: Input.cpp  LCD.cpp  SD.cpp  Speaker.cpp  Vibrator.cpp
src/: LCD.cpp  OS.cpp  SD.cpp  main.cpp  memory.cpp  path.cpp
